<resources>
    <string name="app_name">Admin</string>
    <string name="api_key" translatable="false">AIzaSyAYf7SAuH7r-6JjeqC7GhG3M5S0EJdEiyY</string>
    <string name="welcome">Welcome back 👋</string>


    <string name="SignUp_tv">Sign Up</string>
    <string name="SignUp_tv_text">Create account and choose favorite menu</string>
    <string name="SignUp_tv_Name">Name </string>
    <string name="SignUp_et_NameHint">Your name </string>
    <string name="SignUp_tv_Email">Email </string>
    <string name="SignUp_et_EmailHint">Your Email </string>
    <string name="SignUp_tv_Password">Password </string>
    <string name="SignUp_et_PasswordHint">Your Password </string>
    <string name="SignUp_bt_Register">Register </string>
    <string name="SignUp_tv_HaveAccount">Have an account?  Sign in</string>
    <string name="SignUp_tv_SignIn">Sign In</string>
    <string name="SignUp_tv_text2">By clicking Register, you agree to our </string>
    <string name="SignUp_tv_text3">Terms and Date Policy </string>
    <string name="Email">Email</string>
    <string name="Your_Email">Your email</string>
    <string name="Password">Your password</string>
    <string name="forgot_password">Forgot Password?</string>

    <string name="signInInfo">"Sign in your account"</string>
    <string name="SignIn_Username">Username</string>
    <string name="SignIn_Password">Password</string>
    <string name="SignIn">Sign in </string>
    <string name="forgetPassword">Forget your password ?</string>
    <string name="SignIn_CreateNewAccount">"Don't have an account? Sign up"</string>
    <string name="usernameError">Enter your username</string>
    <string name="passwordError">Enter your password</string>
    <string name="passwordError2">The password must be at least 8 characters long</string>
    <string name="SignUp_tv_RestaurantName">Restaurant name</string>
    <string name="SignUp_UploadLogo">Click to upload restaurant logo</string>
    <string name="SignUp_tv_RestaurantLogo">Restaurant logo</string>
    <string name="SignUp_bt_Next">Next</string>
    <string name="DetectLocation">Location</string>
    <string name="AdminInfo">Admin info</string>
    <string name="DetectLocation2">Detect your restaurant location</string>
    <string name="DetectLocation3">Automatically Locating</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="adminInfo2">Register your personal data to complete the restaurant registration process</string>
    <string name="SignIn_rePassword">Re-password</string>
    <string name="SignIn_phone">Phone number</string>
    <string name="category">Category</string>
    <string name="add_category">Add new category</string>
    <string name="category_name">Categroy name</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addMeal">Add new meal</string>
    <string name="AddNewMeal">Add new meal</string>
    <string name="mealName">Meal name</string>
    <string name="SignUp_Upload">Click to \n upload image</string>
    <string name="Order">Order # %1$s</string>
    <string name="client">Client: %1$s</string>
    <string name="delviery">Delivery: %1$s</string>
    <string name="orderItem">"%1$s  of  %2$s  with  %3$s  size"</string>
    <string name="ResInfo">Restaurant Info.</string>
    <string name="ResInfo2">Create your restaurant to enjoy with our features</string>
    <string name="Orders">Orders</string>
    <string name="Menu">Menu</string>
    <string name="totalPrice">Price: %1$s EGP</string>
    <string name="price">%1$s EGP</string>
    <string name="size">Size</string>
    <string name="price2">Price</string>
    <string name="SignOut">Sign out</string>
    <string name="no">There is no content to display</string>

</resources>