<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentContainerView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryTextColor"
    android:orientation="vertical"
    tools:context=".ui.LocationActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_15sdp">


        <TextView
            android:id="@+id/SignUp_tv_SignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/DetectLocation"
            android:textColor="@color/secondaryTextColor"
            android:textSize="@dimen/_22ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/SignUp_tv_Create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:text="@string/DetectLocation2"
            android:textAlignment="textStart"
            android:textColor="@color/ThirdTextColor"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintTop_toBottomOf="@+id/SignUp_tv_SignUp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:layout_marginTop="@dimen/_20sdp"
            app:cardCornerRadius="@dimen/_5sdp">

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/fragmentContainer"
                android:tag="TAG"
                android:name="com.example.admin.GoogleMap"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/AutoLocating"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/DetectLocation3"
            app:cornerRadius="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragmentContainerView" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Next"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/SignUp_bt_Next"
            app:cornerRadius="@dimen/_8sdp" />

    </LinearLayout>

</LinearLayout>



