<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_22sdp"
    android:background="@color/primaryTextColor"

    tools:context=".ui.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@color/secondaryTextColor"
            android:textSize="@dimen/_20ssp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:text="@string/signInInfo"
            android:textColor="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView" />

        <TextView
            android:id="@+id/SignUp_tv_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/SignIn_Username"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/SignUp_Et_Name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            app:boxBackgroundColor="#F8F8F8"
            app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
            app:boxCornerRadiusBottomStart="@dimen/_10sdp"
            app:boxCornerRadiusTopEnd="@dimen/_10sdp"
            app:boxCornerRadiusTopStart="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/SignIn_InputET_Username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="20"
                android:maxLines="1"
                android:paddingStart="@dimen/_15sdp"
                android:textColor="@color/secondaryTextColor"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/SignIn_Password"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/grey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/SignUp_et_Password"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            app:boxBackgroundColor="#fafafa"
            app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
            app:boxCornerRadiusBottomStart="@dimen/_10sdp"
            app:boxCornerRadiusTopEnd="@dimen/_10sdp"
            app:boxCornerRadiusTopStart="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@+id/SignUp_Et_Name"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#C6C6C6">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/SignIn_InputET_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:paddingStart="@dimen/_15sdp"
                android:textColor="@color/secondaryTextColor"
                android:textColorHint="@color/grey"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@string/forgetPassword"
            android:textColor="@color/primaryDarkColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SignUp_et_Password" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/SignIn_Btn_SignIn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:maxLength="20"
            android:maxLines="1"
            android:text="@string/SignIn"
            app:cornerRadius="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView4" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/SignIn_CreateNewAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/SignIn_CreateNewAccount"
            android:textColor="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialButton" />

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>