<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/secondaryColor"
    android:padding="@dimen/_15sdp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/SignUp_tv_SignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_category"
        android:textColor="@color/secondaryTextColor"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:textColorHint="@color/grey"
        app:boxBackgroundColor="#F8F8F8"
        app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
        app:boxCornerRadiusBottomStart="@dimen/_10sdp"
        app:boxCornerRadiusTopEnd="@dimen/_10sdp"
        app:boxCornerRadiusTopStart="@dimen/_10sdp"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@+id/SignUp_tv_SignUp"
        tools:layout_editor_absoluteX="19dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/categoryName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:hint="@string/category_name"
            android:inputType="text"
            android:maxLength="20"
            android:maxLines="1"
            android:paddingStart="@dimen/_15sdp"
            android:textColor="@color/secondaryTextColor"
            android:textColorHint="@color/grey"
            tools:ignore="RtlSymmetry" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:selectableItemBackground"
        android:text="@string/done"
        android:textColor="@color/secondaryTextColor"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_18sdp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:selectableItemBackground"
        android:text="@string/cancel"
        android:textColor="@color/secondaryTextColor"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toStartOf="@+id/done"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>