<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/primaryTextColor">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/order"
        android:drawablePadding="@dimen/_5sdp"
        android:text="@string/Order"
        android:layout_margin="@dimen/_18sdp"
        android:textColor="@color/secondaryTextColor"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/_9sdp"
        app:layout_constraintTop_toBottomOf="@+id/order"
        android:text="15/6/2024" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/client"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/client"
        android:textColor="@color/secondaryTextColor"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/delivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delviery"
        android:layout_marginTop="@dimen/_7sdp"
        android:textColor="@color/secondaryTextColor"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintStart_toStartOf="@+id/client"
        app:layout_constraintTop_toBottomOf="@+id/client" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E8E8E8"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/delivery" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delivery" />



</androidx.constraintlayout.widget.ConstraintLayout>